--- a/oko_project/bitrix_calc/templates/calculation_add.html
+++ b/oko_project/bitrix_calc/templates/calculation_add.html
@@ -249,11 +249,14 @@ document.addEventListener("DOMContentLoaded", () => {
                 // Заполняем поля параметров и название калькуляции
                 setTimeout(() => {
                     populateParameterFields(parametersData, calculationName);
+                    setTimeout(() => {
+                        initializePage();
+                    }, 500);
                 }, 500);
             }, 500); // Ожидание для загрузки данных
         }
     });
-    initializePage();
+    
 });
 function initializePage() {
     // Убедимся, что данные parameters_dict доступны
