--- a/oko_project/bitrix_calc/templates/calculation_add.html
+++ b/oko_project/bitrix_calc/templates/calculation_add.html
@@ -222,7 +222,7 @@ document.addEventListener("DOMContentLoaded", () => {
     const submitButton = document.querySelector('.submit-button');
 
 
-
+    const calc_number = "{{calc_number}}";
     const firstSelectedProductId = "{{first_good_id}}";
     const goodsCompositionsData = {{goods_compositions_data | safe}}; // Данные в формате JSON
     const parametersData = {{parameters_data | safe}}; // Данные параметров
