--- a/oko_project/bitrix_calc/templates/calculation_add.html
+++ b/oko_project/bitrix_calc/templates/calculation_add.html
@@ -220,7 +220,7 @@ let selectedProductName = null;
 document.addEventListener("DOMContentLoaded", () => {
     const calculationName = "{{calculation_name}}"; // Название калькуляции
     const submitButton = document.querySelector('.submit-button');
-
+    console.log("{{calc_number}}")
 
     const calc_number = "{{calc_number}}";
     const firstSelectedProductId = "{{first_good_id}}";
