--- a/oko_project/bitrix_calc/templates/calculation_add.html
+++ b/oko_project/bitrix_calc/templates/calculation_add.html
@@ -972,7 +972,7 @@ function updateCalculation() {
         return;
     }
 
-    fetch(`/api/update-calculation/${calculationId}/`, {
+    fetch(`/api/update-calculation/${calc_number}/`, {
     method: 'POST',
     headers: {
         'Content-Type': 'application/json',
